# spawny

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  README.md  meson.build
.circleci/: Dockerfile  config.yml
cmake/: SpClientConfig.cmake.in
data/: CMakeLists.txt  meson.build  sp-daemon.service  sp-daemon.service.cmake  sp-daemon.socket  sp-daemon.socket.cmake  sp-greeter-start.service  sp-greeter-start.service.cmake  spawny  spawny-greeter  spawny.ini  spawny.service
pc/: CMakeLists.txt  sp-client.pc.cmake
src/: meson.build
src/cli-greeter/: CMakeLists.txt  client.c  main.c  main.h
src/client/: CMakeLists.txt  client.c  greeter.proto  socket_creation.c
src/config/: config.h.cmake
src/daemon/: CMakeLists.txt  config.c  greeter.c  greeter.h  main.h  manager.c  manager.h  server.h  spawnregistery.c  templatereg.h  tty_temp.c  wl_temp.c
src/greeter_start/: CMakeLists.txt  main.c
src/inih/: CMakeLists-inih.txt  CMakeLists.txt
src/integration-test/: prepare  run
src/integration_test/: CMakeLists.txt  binary_locations.h.cmake  preload_systemd.c  prepare.sh  test.h  test_data.h  test_data_helper.h  test_greeter_start.c  test_protocol.c  test_suite.c  util.c
src/integration_test/test-data/: passwd  spawny.ini
src/libsp_client/: CMakeLists.txt  Sp_Client.h  client.c  meson.build  socket_creation.c  sp_client_private.h
src/prompt-daemon/: CMakeLists.txt  config.c  main.c  main.h  manager.c  manager.h  server.c  server.h  sessionmgt.h  sessionmgt_logind.c  spawnservice.c  spawnservice.h  templatereg.c  templatereg.h  templates.h  tty_temp.c  wl_temp.c  x11_temp.c
src/protocol/: CMakeLists.txt  greeter.proto  protocol.h  server.proto  socket_creation.c  sp_protocol.h
src/selftest/: main.c  meson.build
src/sp-daemon/: CMakeLists.txt  app_config.c  app_config.h  array.c  array.h  config.c  config.h  desktop_common.c  desktop_common.h  greeter.c  greeter.h  log.c  log.h  main.c  main.h  manager.c  manager.h  meson.build  server.c  server.h  server_dummy.c  server_systemd.c  session_spawn.proto  sessionmgt.h  sessionmgt_dummy.c  sessionmgt_logind.c  spawnregistery.c  spawnregistery.h  spawnservice.c  spawnservice.h  templatereg.c  templatereg.h  templates.h  tty_temp.c  utils.c  utils.h  wl_temp.c  x11_temp.c
src/sp-fallback-greeter/: CMakeLists.txt  main.c  meson.build
src/sp-greeter-set/: main.c  meson.build
src/sp-greeter-start/: CMakeLists.txt  main.c  meson.build
src/sp-protocol/: CMakeLists.txt  README.md  greeter.proto  meson.build  server.proto  socket_creation.c  sp_protocol.h
src/sp-user-db/: CMakeLists.txt  meson.build  user_db.c  user_db.h
src/sp-user-db-util/: CMakeLists.txt  meson.build  user_db_util.c
src/tests/: CMakeLists.txt  meson.build  test.c  test.h  test_array.c  test_manager.c  test_spawnregistery.c  test_templatereg.c  test_utils.c
src/util/: log.c  log.h  meson.build  mkpath.c  mkpath.h  sp-util.h
subprojects/: inih.wrap
